# ufoLib2

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  explanations.rst  index.rst  reference.rst
src/ufoLib2/: __init__.py  constants.py  converters.py  errors.py  glyphSet.py  reader.py  types.py  typing.py  writer.py
src/ufoLib2/objects/: __init__.py  anchor.py  component.py  contour.py  dataSet.py  features.py  font.py  glyph.py  guideline.py  image.py  imageSet.py  info.py  kerning.py  layer.py  layerSet.py  lib.py  misc.py  point.py
src/ufoLib2/objects/info/: __init__.py  woff.py
src/ufoLib2/pointPens/: glyphPointPen.py
src/ufoLib2/serde/: __init__.py  json.py  msgpack.py  pickle.py  util.py
tests/: conftest.py  test_converters.py  test_ufoLib2.py
tests/data/: MutatorSansBoldCondensed.json
tests/data/WoffMetadataTest.ufo/: fontinfo.plist
tests/objects/: test_component.py  test_contour.py  test_datastore.py  test_font.py  test_glyph.py  test_layer.py  test_object_lib.py
tests/serde/: test_json.py  test_msgpack.py  test_pickle.py  test_serde.py
