[metadata]
name = ufoLib2
description = ufoLib2 is a UFO font processing library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fonttools/ufoLib2
author = Adrien Tétar
author_email = adri-from-59@hotmail.fr
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Text Processing :: Fonts
    License :: OSI Approved :: Apache Software License

[options]
package_dir = =src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
    wheel
install_requires =
    attrs >= 19.2.0
    fonttools[ufo] >= 4.0.0

[options.extras_require]
lxml = lxml

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[sdist]
formats = zip
