[metadata]
name = ufoLib2
description = ufoLib2 is a UFO font processing library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fonttools/ufoLib2
author = Adrien Tétar
author_email = adri-from-59@hotmail.fr
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Text Processing :: Fonts
    License :: OSI Approved :: Apache Software License

[options]
package_dir = =src
packages = find:
python_requires = >=3.7
install_requires =
    attrs >= 22.1.0
    fonttools[ufo] >= 4.0.0
    typing_extensions ; python_version < "3.8"

# https://www.python.org/dev/peps/pep-0561
[options.package_data]
* = py.typed

[options.extras_require]
lxml = lxml
converters = cattrs >= 1.10.0
json =
    cattrs >= 22.2.0
    orjson ; platform_python_implementation != 'PyPy'
msgpack =
    cattrs >= 22.2.0
    msgpack

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
